# geoparticle

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish-test.yml
examples/: create_2D_2phase_dam_break.py  create_3Dintestine.py  gallery.py
geoparticle/: __init__.py  base.py  shapes.py  utils.py
geoparticle.egg-info/: PKG-INFO
src/: __init__.py
